시작지점에 대한 올바른 경로로 보정 작업 및 S3 스토리지 사용

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,15 @@
 .claude/
 myenv/
 venv/
+ml-inference-server
 venv_py311/
 storage/
 ml_models/
 venv_py311/
 project_structure.md
-README.md
 setup.py
 __pycache__/
 docker/
 tests/
+pathfinding-server/datasets/
+datasets/
